--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -366,6 +366,7 @@
 %	\subsection{Sèries de funcions}
 %	\subsection{Sèries de potències}
 %	\subsection{Teorema d'aproximació polinòmica de Weierstrass}
+%	\printbibliography
 \end{document}
 
 
