--- a/parts/AlgebraLineal.tex
+++ b/parts/AlgebraLineal.tex
@@ -623,7 +623,7 @@
 	\end{corollary}
 	\subsection{Teorema de la \texorpdfstring{\(PAQ\)}{}-reducció}
 	\begin{theorem}[Teorema de la \(PAQ\)-reducció]
-		\labelname{Teorema de la $PAQ$-reducció}\label{thm:Teorema de la PAQ-reducció}
+		\labelname{Teorema de la \ensuremath{PAQ}-reducció}\label{thm:Teorema de la PAQ-reducció}
 		Sigui \(A\) una matriu de mida \(m\times n\) sobre un cos \(\mathbb{K}\). Aleshores existeixen un únic nombre natural \(r\) satisfent \(r\leq\min(m,n)\), una matriu elemental \(P\) d'ordre \(m\) sobre \(\mathbb{K}\) i una matriu elemental \(Q\) d'ordre \(n\) sobre \(\mathbb{K}\) tals que
 		\[PAQ=\left[\begin{array}{c|c}
 		I_{r} & 0\\\hline
