--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -876,7 +876,7 @@
 		\end{proof}
 	\end{proposition}
 	\begin{definition}[Òrbita d'un element d'un \(G\)-conjunt]
-		\labelname{l'òrbita d'un element d'un $G$-conjunt}\label{def:òrbita d'un element d'un G-conjunt}
+		\labelname{l'òrbita d'un element d'un \ensuremath{G}-conjunt}\label{def:òrbita d'un element d'un G-conjunt}
 		Siguin \(G\) un grup amb l'operació \(\ast\), \(\cdot\) una acció de \(G\) sobre un conjunt \(X\) i \(\sim\) una relació d'equivalència sobre \(X\) tal que per a tot \(x_{1},x_{2}\in X\) diem que \(x_{1}\sim x_{2}\) si i només si existeix un \(g\in G\) tal que \(x_{1}=g\cdot x_{2}\). Aleshores direm que \(\mathcal{O}(x)=[x]\) és l'òrbita de \(x\).
 		
 		Aquesta definició té sentit per la proposició \myref{prop:relacio d'òrbites és d'equivalència}.
@@ -925,7 +925,7 @@
 	\end{proposition}
 	\subsection{Teoremes de Sylow}
 	\begin{definition}[\(p\)-subgrup de Sylow]
-		\labelname{$p$-subgrup de Sylow}
+		\labelname{\ensuremath{p}-subgrup de Sylow}
 		\label{def:p-subgrup de Sylow}
 		Siguin \(G\) un grup amb l'operació \(\ast\) tal que \(\abs{G}=p^{n}m\) amb \(p\) primer que no divideix \(m\) i \(P\) un subgrup de \(G\) amb \(\abs{P}=p^{n}\). Aleshores direm que \(P\) és un \(p\)-subgrup de Sylow de \(G\).
 	\end{definition}
