--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1625,7 +1625,7 @@
 	\end{theorem}
 	\subsection{Cicles}
 	\begin{definition}[\(r\)-cicle]
-		\labelname{$r$-cicle}
+		\labelname{\ensuremath{r}-cicle}
 		\label{def:r-cicle}
 		Siguin \(X\) un conjunt no buit i \(\sigma\) una permutació de \(\GrupSimetric_{X}\) tals que \(\Mou(\sigma)=\{a_{1},\dots,a_{r}\}\) amb \(\sigma(a_{i})=a_{i+1}\) per a tot \(i\in\{1,\dots,r-1\}\) i \(\sigma(a_{r})=a_{1}\). Aleshores direm que \(\sigma\) és un \(r\)-cicle, o un cicle, i denotarem
 		\[\sigma=(a_{1},\dots,a_{r}).\]
