--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -19,23 +19,23 @@
 	\begin{definition}[Bola]
 		\labelname{bola}\label{def:bola}
 		Siguin \(X\) amb la distància \(d\) un espai mètric, \(a\) un element de \(X\) i \(r>0\) un nombre real. Aleshores definim
-		\[\B(a,r)=\{x\in X\mid d(x,a)<r\}\]
+		\[\bola(a,r)=\{x\in X\mid d(x,a)<r\}\]
 		com la bola de radi \(r\) centrada en \(a\).
 	\end{definition}
 	\begin{definition}[Obert]
 		\labelname{obert}\label{def:obert espai mètric}
-		Sigui \(X\) amb la distància \(d\) un espai mètric i \(\obert{U}\) un subconjunt de \(X\) tals que per a tot element \(x\) de \(\obert{U}\) existeix un \(\varepsilon>0\) real tal que \(\B(x,\varepsilon)\subset\obert{U}\). Aleshores direm que \(\obert{U}\) és un obert.
+		Sigui \(X\) amb la distància \(d\) un espai mètric i \(\obert{U}\) un subconjunt de \(X\) tals que per a tot element \(x\) de \(\obert{U}\) existeix un \(\varepsilon>0\) real tal que \(\bola(x,\varepsilon)\subset\obert{U}\). Aleshores direm que \(\obert{U}\) és un obert.
 	\end{definition}
 	\begin{proposition}
 		\label{prop:les boles són oberts}
-		Siguin \(X\) amb la distància \(d\) un espai mètric i \(\B(a,r)\) una bola de \(X\). Aleshores \(\B(a,r)\) és un obert.
+		Siguin \(X\) amb la distància \(d\) un espai mètric i \(\bola(a,r)\) una bola de \(X\). Aleshores \(\bola(a,r)\) és un obert.
 		\begin{proof}
-			Prenem un element \(b\in\B(a,r)\) i definim
+			Prenem un element \(b\in\bola(a,r)\) i definim
 			\begin{equation}
 			\label{prop:les boles són oberts:eq1}
 				\varepsilon=\frac{r-d(a,b)}{2}.
 			\end{equation}
-			Aleshores considerem la bola \(\B(b,\varepsilon)\) i tenim que \(\B(b,\varepsilon)\subset\B(a,r)\), ja que si prenem un element \(x\) de \(\B(b,\varepsilon)\), per la definició de \myref{def:distància} trobem que
+			Aleshores considerem la bola \(\bola(b,\varepsilon)\) i tenim que \(\bola(b,\varepsilon)\subset\bola(a,r)\), ja que si prenem un element \(x\) de \(\bola(b,\varepsilon)\), per la definició de \myref{def:distància} trobem que
 			\begin{align*}
 				d(x,a)&\leq d(x,b)+d(b,a)\\
 				&<\varepsilon+d(b,a)\tag{\myref{def:bola}}\\
@@ -50,9 +50,9 @@
 		\labelname{}\label{prop:propietat de Hausdorff}
 		Siguin \(X\) amb la distància \(d\) un espai mètric i \(x\) i \(y\) dos elements diferents de \(X\). Aleshores existeixen dos oberts \(\obert{U}\) i \(\obert{V}\) disjunts tals que \(x\) és un element de \(\obert{U}\) i \(y\) és un element de \(\obert{V}\).
 		\begin{proof}
-			Definim \(r=\frac{d(x,y)}{3}\) i considerem les boles \(\B(x,r)\) i \(\B(y,r)\). Per la definició de \myref{def:distància} i la definició de \myref{def:bola} tenim que \(x\) és un element de \(\B(x,r)\) i \(y\) és un element de \(\B(y,r)\).
+			Definim \(r=\frac{d(x,y)}{3}\) i considerem les boles \(\bola(x,r)\) i \(\bola(y,r)\). Per la definició de \myref{def:distància} i la definició de \myref{def:bola} tenim que \(x\) és un element de \(\bola(x,r)\) i \(y\) és un element de \(\bola(y,r)\).
 			
-			També tenim que les boles \(\B(x,r)\) i \(\B(y,r)\) són disjuntes, ja que si prenem un element \(a\) de \(X\) tal que \(a\) pertanyi a \(\B(x,r)\) i a \(\B(y,r)\) aleshores tenim, per la definició de \myref{def:bola}, que \(d(x,a)<r\) i \(d(a,y)<r\), i per la definició de \myref{def:distància} tenim que
+			També tenim que les boles \(\bola(x,r)\) i \(\bola(y,r)\) són disjuntes, ja que si prenem un element \(a\) de \(X\) tal que \(a\) pertanyi a \(\bola(x,r)\) i a \(\bola(y,r)\) aleshores tenim, per la definició de \myref{def:bola}, que \(d(x,a)<r\) i \(d(a,y)<r\), i per la definició de \myref{def:distància} tenim que
 			\[d(x,a)+d(a,y)\geq d(x,y).\]
 			Ara bé, tenim per hipòtesi que \(r=\frac{d(x,y)}{3}\). Per tant
 			\begin{align*}
@@ -60,21 +60,21 @@
 				&\leq \frac{d(x,y)}{3} + \frac{d(x,y)}{3} \\
 				&\leq \frac{2d(x,y)}{3} < d(x,y),
 			\end{align*}
-			i per tant aquest \(a\) no existeix i trobem que \(\B(x,r)\) i \(\B(y,r)\) són disjunts.
+			i per tant aquest \(a\) no existeix i trobem que \(\bola(x,r)\) i \(\bola(y,r)\) són disjunts.
 			
-			Per acabar, per la proposició \myref{prop:les boles són oberts} tenim que les boles \(\B(x,r)\) i \(\B(y,r)\) són oberts, i hem acabat.
+			Per acabar, per la proposició \myref{prop:les boles són oberts} tenim que les boles \(\bola(x,r)\) i \(\bola(y,r)\) són oberts, i hem acabat.
 		\end{proof}
 	\end{proposition}
 	\begin{theorem}
 		Siguin \(X\) amb la distància \(d\) i \(X'\) amb la distància \(d'\) dos espais mètrics i \(f\colon X\longrightarrow X'\) una funció. Aleshores \(f\) és contínua si i només si per a tot \(\obert{U}\) obert de \(X'\) tenim que \(\Ima_{\obert{U}}(f^{-1})\) és obert.
 		\begin{proof}
-			Veiem primer que la condició és necessària (\(\implica\)). Suposem doncs que \(f\) és contínua. Prenem un obert \(\obert{U}\) de \(X'\) i un element \(y\) de \(X'\) tal que \(f^{-1}(y)\in\Ima_{\obert{U}}(f^{-1})\), i denotem \(x=f^{-1}(y)\). Per la definició d'\myref{def:obert espai mètric} tenim que existeix un nombre real \(\varepsilon>0\) tal que \(\B(y,\varepsilon)\subset\Ima_{\obert{U}}(f^{-1})\).
+			Veiem primer que la condició és necessària (\(\implica\)). Suposem doncs que \(f\) és contínua. Prenem un obert \(\obert{U}\) de \(X'\) i un element \(y\) de \(X'\) tal que \(f^{-1}(y)\in\Ima_{\obert{U}}(f^{-1})\), i denotem \(x=f^{-1}(y)\). Per la definició d'\myref{def:obert espai mètric} tenim que existeix un nombre real \(\varepsilon>0\) tal que \(\bola(y,\varepsilon)\subset\Ima_{\obert{U}}(f^{-1})\).
 			
-			Prenem un element \(x'\) de \(\B(y,\varepsilon)\). Per la definició de \myref{def:bola} tenim que \(d(x,x')<\varepsilon\), i per la definició de \myref{def:funció contínua} tenim que existeix un \(\delta>0\) real tal que \(d'(f(x'),y)<\varepsilon\), i per la definició de \myref{def:bola} això és que \(f(x')\in\B(y,\varepsilon)\). Per tant tenim que \(\Ima_{\B(x,\delta)}(f)\subset\B(y,\varepsilon)\) i trobem que \(\B(x,\delta)\subset\Ima_{\obert{U}}(f^{-1})\), i per la definició de \myref{def:obert espai mètric} trobem que \(\Ima_{\obert{U}}(f^{-1})\) és un obert, com volíem veure.
+			Prenem un element \(x'\) de \(\bola(y,\varepsilon)\). Per la definició de \myref{def:bola} tenim que \(d(x,x')<\varepsilon\), i per la definició de \myref{def:funció contínua} tenim que existeix un \(\delta>0\) real tal que \(d'(f(x'),y)<\varepsilon\), i per la definició de \myref{def:bola} això és que \(f(x')\in\bola(y,\varepsilon)\). Per tant tenim que \(\Ima_{\bola(x,\delta)}(f)\subset\bola(y,\varepsilon)\) i trobem que \(\bola(x,\delta)\subset\Ima_{\obert{U}}(f^{-1})\), i per la definició de \myref{def:obert espai mètric} trobem que \(\Ima_{\obert{U}}(f^{-1})\) és un obert, com volíem veure.
 			
 			Veiem ara que la condició és suficient (\(\implicatper\)). Suposem doncs que per a tot \(\obert{U}\) obert de \(X'\) tenim que \(\Ima_{\obert{U}}(f^{-1})\) és obert.
 			
-			Prenem un element \(xy\) de \(X\) i un real \(\varepsilon>0\). Si denotem \(y=f(x)\) tenim, per la proposició \myref{prop:les boles són oberts}, que la bola \(\B(y,\varepsilon)\) és un obert. Per hipòtesi tenim que \(\Ima_{\B(y,\varepsilon)}(f^{-1})\) és un obert, i per la definició d'\myref{def:obert espai mètric} tenim que existeix un nombre real \(\delta>0\) tal que \(\B(x,\delta)\subset\Ima_{\B(y,\varepsilon)}(f^{-1})\).
+			Prenem un element \(xy\) de \(X\) i un real \(\varepsilon>0\). Si denotem \(y=f(x)\) tenim, per la proposició \myref{prop:les boles són oberts}, que la bola \(\bola(y,\varepsilon)\) és un obert. Per hipòtesi tenim que \(\Ima_{\bola(y,\varepsilon)}(f^{-1})\) és un obert, i per la definició d'\myref{def:obert espai mètric} tenim que existeix un nombre real \(\delta>0\) tal que \(\bola(x,\delta)\subset\Ima_{\bola(y,\varepsilon)}(f^{-1})\).
 			
 			Ara bé, per la definició de \myref{def:bola} tenim que això és que per a tot \(x_{0}\) de \(x\) amb \(d'(y,f(x_{0}))<\varepsilon\) tenim que \(d(x,x_{0})<\delta\), i per tant, per la definició de \myref{def:funció contínua} tenim que \(f\) és contínua.
 		\end{proof}
@@ -99,25 +99,25 @@
 		\labelname{}\label{ex:topologia induida per una mètrica}
 		Siguin \(X\) amb la distància \(d\) un espai mètric i \(\tau=\{\obert{U}\subseteq X\mid \obert{U}\text{ és un obert}\}\). Volem veure que \(X\) amb la topologia \(\tau\) és un espai topològic.
 		\begin{solution}
-			Per la definició d'\myref{def:obert espai mètric} trobem que \(\emptyset\) és un obert i que \(X\) és un obert, ja que per a tot \(x\) element de \(X\) per la proposició \myref{prop:les boles són oberts} tenim que \(\B(x,\varepsilon)\) és un subconjunt de \(X\) per a tot \(\varepsilon>0\).
+			Per la definició d'\myref{def:obert espai mètric} trobem que \(\emptyset\) és un obert i que \(X\) és un obert, ja que per a tot \(x\) element de \(X\) per la proposició \myref{prop:les boles són oberts} tenim que \(\bola(x,\varepsilon)\) és un subconjunt de \(X\) per a tot \(\varepsilon>0\).
 			
 			Prenem \(\{\obert{U}_{i}\}_{i=1}^{n}\) una família d'elements de \(\tau\) i considerem
 			\[\obert{U}=\bigcap_{i=1}^{n}\obert{U}_{i}.\]
 			
 			Sigui \(x\) un element de \(\obert{U}\). Per la definició d'\myref{def:obert} tenim que per a tot \(i\in\{1,\dots,n\}\) existeix un \(\varepsilon_{i}>0\) real tal que
-			\[\B(x,\varepsilon_{i})\subset\obert{U}_{i}.\]
+			\[\bola(x,\varepsilon_{i})\subset\obert{U}_{i}.\]
 			Per tant, si definim \(\varepsilon=\min_{i\in\{1,\dots,n\}}\varepsilon_{i}\). Aleshores per la definició de \myref{def:bola} tenim que
-			\[\B(x,\varepsilon)\subseteq\B(x,\varepsilon_{i})\quad\text{per a tot }i\in\{1,\dots,n\}.\]
-			i per tant \(\B(x,\varepsilon)\subset\obert{U}\) i per la definició de \myref{def:obert} tenim que \(\obert{U}\) és un obert.
+			\[\bola(x,\varepsilon)\subseteq\bola(x,\varepsilon_{i})\quad\text{per a tot }i\in\{1,\dots,n\}.\]
+			i per tant \(\bola(x,\varepsilon)\subset\obert{U}\) i per la definició de \myref{def:obert} tenim que \(\obert{U}\) és un obert.
 			
 			Prenem \(\{\obert{U}_{i}\}_{i\in I}\) una família d'oberts de \(\tau\) i considerem
 			\[\obert{U}=\bigcup_{i\in I}\obert{U}_{i}.\]
 			
 			Sigui \(x\) un element de \(\obert{U}\). Per la definició d'\myref{def:obert} tenim que per a tot \(i\in\{1,\dots,n\}\) existeix un \(\varepsilon_{i}>0\) real tal que
-			\[\B(x,\varepsilon_{i})\subset\obert{U}_{i}.\]
+			\[\bola(x,\varepsilon_{i})\subset\obert{U}_{i}.\]
 			Per tant, si definim \(\varepsilon=\min_{i\in\{1,\dots,n\}}\varepsilon_{i}\). Aleshores per la definició de \myref{def:bola} tenim que
-			\[\B(x,\varepsilon)\subseteq\B(x,\varepsilon_{i})\quad\text{per a tot }i\in\{1,\dots,n\}.\]
-			i per tant \(\B(x,\varepsilon)\subset\obert{U}\) i per la definició de \myref{def:obert} tenim que \(\obert{U}\) és un obert, i per la definició de \myref{def:espai topològic} hem acabat.
+			\[\bola(x,\varepsilon)\subseteq\bola(x,\varepsilon_{i})\quad\text{per a tot }i\in\{1,\dots,n\}.\]
+			i per tant \(\bola(x,\varepsilon)\subset\obert{U}\) i per la definició de \myref{def:obert} tenim que \(\obert{U}\) és un obert, i per la definició de \myref{def:espai topològic} hem acabat.
 		\end{solution}
 	\end{example}
 	\begin{example}[Topologia grollera]
@@ -192,13 +192,13 @@
 	\end{definition}
 	\begin{example}
 		Siguin \(X\) amb la distància \(d\) un espai mètric i
-		\[\base{B}=\{\B(x,\varepsilon)\mid x\in X\text{ i }\varepsilon>0\}\]
+		\[\base{B}=\{\bola(x,\varepsilon)\mid x\in X\text{ i }\varepsilon>0\}\]
 		un conjunt. Aleshores \(\base{B}\) és una base de la topologia \(\tau\) induïda per la mètrica.
 		\begin{solution}
 			Tenim que
 			\[\tau=\{\obert{U}\subseteq X\mid\obert{U}\text{ es un obert}\}.\]
 			
-			Prenem doncs un obert \(\obert{U}\) de \(\tau\) i un punt \(x\) de \(\obert{U}\). Per la definició d'\myref{def:obert espai mètric} tenim que existeix un \(\varepsilon>0\) real tal que \(\B(x,\varepsilon)\) és un subconjunt de \(\obert{U}\), i per la definició de \myref{def:base d'una topologia} hem acabat.
+			Prenem doncs un obert \(\obert{U}\) de \(\tau\) i un punt \(x\) de \(\obert{U}\). Per la definició d'\myref{def:obert espai mètric} tenim que existeix un \(\varepsilon>0\) real tal que \(\bola(x,\varepsilon)\) és un subconjunt de \(\obert{U}\), i per la definició de \myref{def:base d'una topologia} hem acabat.
 		\end{solution}
 	\end{example}
 	\begin{definition}[Finor d'una topologia]
@@ -250,7 +250,7 @@
 			
 			Prenem un obert \(\obert{U}\) de \(\tau\). Per la definició \eqref{prop:condició equivalent a base d'una topologia:eq1} trobem que existeix una família \(\{B_{i}\}_{i\in I}\) d'elements de \(\base{B}\) tals que
 			\[\obert{U}=\bigcup_{i\in I}B_{i}.\]
-			Ara bé, per la definició de \myref{def:topologia} tenim que \(\obert{U}\) és un element de \(\tau'\), ja que per hipòtesi \(\base{B}\) és un subconjunt de \(\tau'\). Per tant tenim que \(\tau\subseteq\tau'\). Ara bé, ja hem vist que \(\tau\) és la topologia menys fina que conté els elements de \(\base{B}\), i per la definició de \myref{def:finor d'una topologia} això és que \(\tau'\subseteq\tau\), i pel \myref{thm:doble inclusió} ha de ser \(\tau=\tau'\), com volíem veure.
+			Per la definició de \myref{def:topologia} tenim que \(\obert{U}\) és un element de \(\tau'\), ja que per hipòtesi \(\base{B}\) és un subconjunt de \(\tau'\). Per tant tenim que \(\tau\subseteq\tau'\). Ara bé, ja hem vist que \(\tau\) és la topologia menys fina que conté els elements de \(\base{B}\), i per la definició de \myref{def:finor d'una topologia} això és que \(\tau'\subseteq\tau\), i pel \myref{thm:doble inclusió} ha de ser \(\tau=\tau'\), com volíem veure.
 		\end{proof}
 	\end{proposition}
 	\subsection{Entorns, interior i adherència}
@@ -264,26 +264,85 @@
 	\begin{definition}[Interior]
 		\labelname{interior}\label{def:interior}
 		Siguin \(X\) amb la topologia \(\tau\) un espai topològic, \(x\) un punt de \(X\), \(A\) subconjunt de \(X\) i
-		\[\Int(A)=\{x\in X\mid A\text{ és un entorn de }x\}.\]
-		Aleshores direm que \(\Int(A)\) és l'interior del conjunt \(A\).
+		\[\interior(A)=\{x\in X\mid A\text{ és un entorn de }x\}.\]
+		Aleshores direm que \(\interior(A)\) és l'interior del conjunt \(A\).
 	\end{definition}
 	\begin{proposition}
-		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(A\) un subconjunt de \(X\). Aleshores \(\Int(A)\) és un obert.
+		\label{prop:l'interior d'un conjunt és un obert}
+		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(A\) un subconjunt de \(X\). Aleshores \(\interior(A)\) és un obert.
 		\begin{proof}
-			Prenem un element \(x\) de \(\Int(A)\). Per la definició de \myref{def:interior} tenim que existeix un obert \(\obert{U}_{x}\) tal que \(x\in\obert{U}_{x}\) i \(\obert{U}_{x}\subseteq A\). Aleshores tenim
+			Prenem un element \(x\) de \(\interior(A)\). Per la definició de \myref{def:interior} tenim que existeix un obert \(\obert{U}_{x}\) tal que \(x\in\obert{U}_{x}\) i \(\obert{U}_{x}\subseteq A\). Aleshores tenim
 			\begin{align*}
-			\Int(A)&=\bigcup_{x\in\Int(A)}x \\
-			&\subseteq\bigcup_{x\in\Int(A)}\obert{U}_{x} \\
-			&\subseteq\bigcup_{x\in\Int(A)}\Int(A)=\Int(A)
+				\interior(A)&=\bigcup_{x\in\interior(A)}x \\
+				&\subseteq\bigcup_{x\in\interior(A)}\obert{U}_{x} \\
+				&\subseteq\bigcup_{x\in\interior(A)}\interior(A)=\interior(A).
 			\end{align*}
-			i per tant
-			\[\Int(A)=\bigcup_{x\in\Int(A)}\obert{U}_{x}\]
-			i per la definició de \myref{def:topologia} trobem que \(\Int(A)\) és un obert.
+			
+			Per tant tenim que
+			\[\interior(A)\subseteq\bigcup_{x\in\interior(A)}\obert{U}_{x}\]
+			i
+			\[\bigcup_{x\in\interior(A)}\obert{U}_{x}\subseteq\interior(A),\]
+			i pel \myref{thm:doble inclusió} trobem
+			\[\interior(A)=\bigcup_{x\in\interior(A)}\obert{U}_{x}\]
+			i per la definició de \myref{def:topologia} trobem que \(\interior(A)\) és un obert.
 		\end{proof}
 	\end{proposition}
-	\begin{definition}[Adherència]
-		\labelname{adherència}\label{def:adherència}
+	\begin{proposition}
+		\label{prop:l'interior d'un conjunt és l'unió de tots els oberts continguts en el conjunt}
+		Siguin \(X\) amb la topologia \(\tau\) un espai topològic, \(A\) un subconjunt de \(X\) i
+		\[Y=\{\obert{U}\in\tau\mid\obert{U}\subseteq A\}\]
+		un conjunt. Aleshores
+		\[\interior(A)=\bigcup_{\obert{U}\in Y}\obert{U}.\]
+		\begin{proof}
+			Sigui \(x\) un element de \(A\) tal que existeixi un obert \(\obert{U}_{x}\) satisfent que \(x\) és un element de \(\obert{U}_{x}\) i \(\obert{U}_{x}\) és un subconjunt de \(A\). Aleshores tenim
+			\begin{align*}
+				\interior(A)&=\bigcup_{x\in\interior(A)}x \\
+				&\subseteq\bigcup_{x\in\interior(A)}\obert{U}_{x} \\
+				&\subseteq\bigcup_{x\in\interior(A)}\interior(A)=\interior(A)
+			\end{align*}
+			i pel \myref{thm:doble inclusió} trobem
+			\[\interior(A)=\bigcup_{\obert{U}\in Y}\obert{U}\]
+			com volíem veure.
+		\end{proof}
+	\end{proposition}
+	\begin{corollary}
+		\label{cor:l'interior d'un conjunt conté tots els seus oberts}
+		Siguin \(X\) amb la topologia \(\tau\) un espai topològic, \(A\) un subconjunt de \(X\) i \(\obert{U}\) un obert tal que \(\obert{U}\) sigui un subconjunt de \(A\). Aleshores \(\obert{U}\) és un subconjunt de \(\interior(A)\).
+	\end{corollary}
+	\begin{corollary}
+		\label{cor:un conjunt és obert si i només si el seu interior és obert}
+		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(A\) un subconjunt de \(X\). Aleshores \(A\) és un obert si i només si \(\interior(A)\) és un obert.
+	\end{corollary}
+	\begin{definition}[Punt adherent]
+		\labelname{punt adherent}\label{def:punt adherent}
+		Siguin \(X\) amb la topologia \(\tau\) un espai topològic, \(A\) un subconjunt de \(X\) i \(x\) un punt tal que per a tot entorn \(N\) de \(x\) tenim
+		\[A\cap N\neq\emptyset.\]
+		Aleshores direm que \(x\) és un punt adherent a \(A\).
 	\end{definition}
+	\begin{definition}[Clausura]
+		\labelname{clausura}\label{def:clausura}
+		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(A\) un conjunt. Aleshores direm que
+		\[\clausura(A)=\{x\in X\mid x\text{ és un punt adherent a }A\}\]
+		és la clausura de \(A\).
+	\end{definition}
+	\begin{proposition}
+		\label{prop:la clausura d'un conjunt és un tancat}
+		Siguin \(X\) amb \(\tau\) un espai topològic i \(A\) un subconjunt de \(X\). Aleshores \(\clausura(A)\) és un tancat.
+		\begin{proof}
+			 Prenem un element \(x\) de \(X\setminus\clausura(A)\). Per la definició de \myref{def:clausura} tenim que existeix un entorn \(N\) de \(x\) tal que
+			 \begin{equation}
+			 	\label{prop:la clausura d'un conjunt és un tancat:eq1}
+				 A\cap N=\emptyset,
+			 \end{equation}
+			 i per la definició d'\myref{def:entorn} tenim que existeix un obert \(\obert{U}\) tal que \(x\) és un element de \(\obert{U}\) i que \(\obert{U}\) és un subconjunt de \(N\). Per tant, per \eqref{prop:la clausura d'un conjunt és un tancat:eq1} trobem que \(A\cap\obert{U}=\emptyset\).
+			 
+			 Per tant trobem
+			 \begin{align*}
+				 X\setminus\clausura(A)&=\bigcup_{x\in X\setminus\clausura(A)}x \\
+				 &\supseteq\bigcup_{x\in\obert{U}}
+			 \end{align*}
+		\end{proof}
+	\end{proposition}
 %	\begin{definition}[Aplicació contínua i homeomorfisme]
 %		\labelname{aplicació contínua}\label{def:aplicació contínua}
 %		\labelname{homeomorfisme}\label{def:homeomorfisme topo}
@@ -318,4 +377,5 @@
 %	\subsection{Connexió}
 %	\subsection{Varietats}
 %	\subsection{Teorema de classificació de les superfícies compactes}
+	\printbibliography
 \end{document}
